--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 <body>
 <h1>Privacy Policy</h1>
 <p>This application processes Meta Marketing API data for internal business analytics only. No personal data is collected or shared. Contact: dominik.puner@brandnamic.com for questions.</p>
+<p>This application processes Google Ads und Google Analytics API data for internal business analytics only. No personal data is collected or shared. Contact: dominik.puner@brandnamic.com for questions.</p>
 <p>Last updated: July 16, 2025</p>
 </body></html>
