--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@
 <p>This application processes Meta Marketing API data for internal business analytics only. No personal data is collected or shared. Contact: dominik.puner@brandnamic.com for questions.</p>
 <p>This application processes Google Ads und Google Analytics API data for internal business analytics only. No personal data is collected or shared. Contact: dominik.puner@brandnamic.com for questions.</p>
 <p>Last updated: July 16, 2025</p>
-<a href="https://dominikpunerbn.github.io/MattiaBerichte">link</a>
+<a href="https://dominikpunerbn.github.io/MattiaBerichte.html">link</a>
 </body></html>
