--- a/MattiaBerichte.html
+++ b/MattiaBerichte.html
@@ -70,7 +70,7 @@
     </p>
     <section>
     <h2>Datenschutzerklärung</h2>
-    <a href="dominikpunerbn.github.io/MattiaBerichte/privacy.html"></a>
+    <a href="https://dominikpunerbn.github.io/MattiaBerichte/privacy.html">privacy</a>
   </section>
 
   <section>
